# Fragment-SELFIES

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
docs/: fragment_selfies.md
src/fragment_selfies/: __init__.py  brics.py  cli.py  codec.py  exceptions.py  tokens.py  vocabulary.py
tests/: test_fragment_selfies.py
