[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "fragment-selfies"
dynamic = ["version"]
description = "Robust fragment-aware molecular language with SELFIES-compatible fragment bodies."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Haoyu Lin" }
]
keywords = [
  "cheminformatics",
  "fragment-selfies",
  "molecular-language",
  "molecular-representation",
  "rdkit",
  "selfies"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Chemistry"
]
dependencies = [
  "rdkit>=2025.09.6",
  "selfies>=2.2.0",
  "tqdm>=4.67.3"
]

[project.optional-dependencies]
test = ["pytest>=9.0.3"]

[project.urls]
Homepage = "https://github.com/fairydance/Fragment-SELFIES"
Repository = "https://github.com/fairydance/Fragment-SELFIES"
Issues = "https://github.com/fairydance/Fragment-SELFIES/issues"
Documentation = "https://github.com/fairydance/Fragment-SELFIES/blob/main/docs/fragment_selfies.md"
Paper = "https://arxiv.org/abs/2606.25865"

[project.scripts]
fragment-selfies = "fragment_selfies.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.dynamic]
version = {attr = "fragment_selfies.__version__"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["fragment_selfies*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
